sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: not found: value i
      i=0;
      ^AlgCombSort:10: error: not found: value i
    while (i+ecart < getValueCount()){
           ^AlgCombSort:11: error: not found: value ismaller
      if (ismaller(i,i+1)){
          ^AlgCombSort:11: error: not found: value i
      if (ismaller(i,i+1)){
                   ^AlgCombSort:11: error: not found: value i
      if (ismaller(i,i+1)){
                     ^AlgCombSort:12: error: not found: value i
        i=i+1;
        ^AlgCombSort:14: error: not found: value i
        swap(i,i+ecart);
             ^AlgCombSort:14: error: not found: value i
        swap(i,i+ecart);
               ^